Commit Final Project

--- a/Database/AWS_data_upload.ipynb
+++ b/Database/AWS_data_upload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "52372c57",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "58edc1f7",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f72d4f1e",
    "metadata": {},
    "outputs": [],
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "be495741",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "b8cb20ec",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
     "def create_db_table(db, table_name):\n",
     "    \n",
     "    # Connect to SQL database for loading\n",
-    "    db_string = f\"postgresql://{DB_USER}:{DB_PASS}@{DB_HOST}:5432/us_emissions_db\"\n",
+    "    db_string = f\"postgresql://{DB_USER}:{DB_PASS}@{DB_HOST}:5432/us_emissions\"\n",
     "    \n",
     "    # Create Engine\n",
     "    engine = create_engine(db_string)\n",
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "dd5990c4",
    "metadata": {},
    "outputs": [],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "86d6df15",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "d9518a77",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "3fe94104",
    "metadata": {},
    "outputs": [],
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "c7c8b1e6",
    "metadata": {},
    "outputs": [],
